--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -143,7 +143,9 @@
    "id": "731a0c49",
    "metadata": {},
    "source": [
-    "## Model Construction (pix2pix)"
+    "## Model Construction (pix2pix)\n",
+    "\n",
+    "https://www.tensorflow.org/tutorials/generative/pix2pix"
    ]
   },
   {
