add new test and train file

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "226250d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-15T11:33:17.976559Z",
-     "start_time": "2024-01-15T11:33:17.973264Z"
+     "end_time": "2024-01-26T11:07:01.548025Z",
+     "start_time": "2024-01-26T11:07:00.365573Z"
     }
    },
    "outputs": [],
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1bf230cb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-15T11:43:39.637190Z",
-     "start_time": "2024-01-15T11:43:39.561647Z"
+     "end_time": "2024-01-26T11:07:16.334361Z",
+     "start_time": "2024-01-26T11:07:13.020757Z"
     }
    },
    "outputs": [
@@ -97,9 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1d79c6c8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T11:07:34.001409Z",
+     "start_time": "2024-01-26T11:07:22.526956Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -150,9 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "23515ea4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T11:07:43.769767Z",
+     "start_time": "2024-01-26T11:07:43.751890Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -160,7 +170,7 @@
        "(256, 512, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
