--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4713f7f0",
+   "id": "6a24e34b",
    "metadata": {},
    "source": [
     "# Original data (Serialized form)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "befea200",
+   "id": "dda7adbb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:04:53.507743Z",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "9fffdb0b",
+   "id": "0c90f80c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:05:38.653683Z",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "4a091beb",
+   "id": "77869729",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:06:40.741486Z",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9fd139a2",
+   "id": "83ace777",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:05:42.057490Z",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8e0254f7",
+   "id": "d3af0b99",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T08:57:19.885144Z",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bca1745",
+   "id": "d3edefbf",
    "metadata": {},
    "source": [
     "# check channels"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "30ff6e10",
+   "id": "f1771ffd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:03:48.451442Z",
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "26feea3c",
+   "id": "6649271c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:03:50.266396Z",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "ebf9c668",
+   "id": "6f31db58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:04:38.082780Z",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "b37987b1",
+   "id": "678eb5fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:04:39.627151Z",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "d328fbe3",
+   "id": "331db6c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-08T09:04:41.173141Z",
@@ -407,19 +407,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d462f02",
+   "id": "3b22ff47",
    "metadata": {},
    "source": [
-    "# "
+    "# Save Gray scale image to Color PNG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ffee1c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 118,
+   "id": "faab9d98",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-08T09:32:14.706227Z",
+     "start_time": "2024-02-08T09:32:14.642517Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dimension of the image is: (256, 512, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'results/colored_image.png'\n",
+    "plt.imsave(path, image)\n",
+    "\n",
+    "image = cv2.imread(path, cv2.IMREAD_UNCHANGED)  # add cv2.IMREAD_UNCHANGED flag\n",
+    "print('The dimension of the image is:', image.shape)"
+   ]
   }
  ],
  "metadata": {
