--- a/pix2pix_model.ipynb
+++ b/pix2pix_model.ipynb
@@ -12,15 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "226250d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T08:51:35.398336Z",
-     "start_time": "2024-01-31T08:51:34.717065Z"
+     "end_time": "2024-02-15T16:33:03.064068Z",
+     "start_time": "2024-02-15T16:32:52.566781Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\qiyuanxu\\AppData\\Local\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
